sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: reassignment to val
    }else{i=i+1}
           ^